--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,6 @@
     background-color: rgba(255, 0, 0, 0.7);
 }
 
-.message .success {
-    
+.success {  
     background-color: rgba(0, 255, 0, 0.7);
 }
