--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+a {
+    color: #fff;
+    transition: all .5s ease;
+    text-decoration: 2px underline rgb(37, 70, 255);
+}
+
+a:hover {
+    color: rgb(37, 70, 255);
+}
+
 .usermodal {
     position: fixed;
     top: 0;
@@ -74,7 +84,7 @@
 }
 
 .usermodal__link {
-    margin-top: 20px;
+    
 }
 
 .form__content {
@@ -134,8 +144,13 @@
     white-space: nowrap;
 }
 
+.table .usermodal__link {
+    float: right;
+}
+
 .table img {
-   cursor: pointer;
+   width: 20px;
+   height: 20px;
 }
 
 @media (max-width: 800px) {
@@ -163,7 +178,7 @@
     }
 
     .table td {
-        display: block;
+        display: flex;
     }
 }
 
