--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,29 @@ a:hover {
     max-width: 600px;
 }
 
-.form__content {
+.usermodal__input-img {
+    text-align: center;
+    max-width: 100px;
+}
+
+.usermodal__input-img span {
+    position: relative;
+    width: 100%;
+}
+
+.usermodal__input-img img {
+    top: 30px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+}
+
+.form__content {
+    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 10px;
@@ -94,6 +114,10 @@ a:hover {
 .form__item {
     width: 49%;
     min-width: 200px;
+}
+
+.form__item-prewiew {
+    display: block;
 }
 
 .form__footer {
@@ -107,7 +131,6 @@ a:hover {
 }
 
 .form__item textarea {
-    width: 300px;
     height: 100px;
 }
 
@@ -140,6 +163,11 @@ a:hover {
     white-space: nowrap;
 }
 
+.table td .usermodal__link img {
+    width: 100%;
+    text-align: center;
+}
+
 .table .usermodal__link {
     float: right;
 }
@@ -147,6 +175,12 @@ a:hover {
 .table img {
    width: 20px;
    height: 20px;
+}
+
+@media (max-width: 1000px) {
+    .table td .usermodal__link {
+        text-align: left;
+    }
 }
 
 @media (max-width: 800px) {
